gdb 	PR backtrace/10770: 	* valarith.c (value_binop): Handle BINOP_GTR, BINOP_LEQ, and 	BINOP_GEQ.  Handle BINOP_NOTEQUAL in the signed case. 	* dwarf2expr.c (new_dwarf_expr_context): Allocate 	dwarf_stack_values, not CORE_ADDRs. 	(execute_stack_op): Change DW_OP_div and comparison operators to 	use signed operands. gdb/testsuite 	PR backtrace/10770: 	* gdb.dwarf2/pr10770.exp: New file. 	* gdb.dwarf2/pr10770.c: New file. 	* gdb.dwarf2/Makefile.in (EXECUTABLES): Add pr10770.